[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paiagym"
version = "0.0.4"
authors = [
    { name="timcsy", email="timocsy@yahoo.com.tw" },
]
description = "A platform to run Gymnasium or PettingZoo games with AI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "gymize==0.0.2",
    "stable_baselines3",
    "requests",
    "python-dotenv"
]

[project.urls]
"Homepage" = "https://github.com/PAIA-Playful-AI-Arena/paiagym"
"Bug Tracker" = "https://github.com/PAIA-Playful-AI-Arena/paiagym/issues"

[project.scripts]
paiagym = "paiagym:main.main"